tests/e2e/fail/extern_param_str.ep
# COMPILE_ERROR: extern 'BadExternStr' parameter 'text' has unsupported ABI type str
extern "demo.dll" fun BadExternStr(text: str): i32

fun main(): void {
}
